<resources>
    <string name="app_name">Park21</string>
    <string name="edit_message">Enter message</string>
    <string name="button_send">Send</string>
    <string name="button_maps">Maps</string>
    <string name="button_edit">Ver mis carros</string>
    <string name="button_familia">Ver Familia</string>
    <string name="button_ingresar_parqueadero">Generar Código Qr para entrar</string>
    <string name="button_salir_qr_parqueadero">Generar Código Qr para salir</string>
    <string name="button_eliminar_familia">Eliminar Familia</string>
    <string name="button_eliminar_carro">Eliminar carro</string>
    <string name="button_llegar_carro">¿Cómo llegar a mi carro?</string>
    <string name="button_salir_parqueadero">Salir del parqueadero</string>
    <string name="button_pagar_Parqueadero">Pagar Parqueadero</string>
    <string name="button_ver_carro">Ver carro en tiempo real</string>
    <string name="button_seguir_parquear">Seguir a parquear</string>
    <string name="button_salir_parquear">Salí del parqueadero</string>
    <string name="button_pagar_pse">Pagar parqueadero PSE</string>
    <string name="button_registrar_factura">Registrar factura</string>
    <string name="button_tomar_foto">Toma foto a tu factura</string>
    <string name="registrado">Vehículo registrado en el parqueadero:</string>
    <string name="ubicacion">Ubicación del vehículo:</string>
    <string name="ingreso">Hora de ingreso:</string>
    <string name="hola">Paga tu parqueadero</string>
    <string name="parqueadero">Valor del parqueadero:</string>
    <string name="descuento">Descuento por facturas registradas:</string>
    <string name="no_internet">No tienes internet no puedes usar esta funcionalidad.</string>
    <string name="title_activity_settings">Settings</string>

    <string-array name="gender">
        <item>Masculino</item>
        <item>Femenino</item>
        <item>Otro</item>
    </string-array>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
