<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IngresarParqueaderoActivity">

    <Button
        android:id="@+id/buttonGenerarQr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_ingresar_parqueadero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/QR_Image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSeguiraParquear" />

    <Button
        android:id="@+id/buttonSeguiraParquear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_seguir_parquear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonGenerarQr" />
</androidx.constraintlayout.widget.ConstraintLayout>